fix: Remove tracked secrets and ignored files from repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+# --- Arquivos de Segredos e Ambiente ---
 .env
+
+# --- Dependências e Ambientes Virtuais do Python ---
+# Pastas de ambiente virtual
 venv/
 .venv/
 env/
@@ -6,22 +10,37 @@ env/
 env.bak/
 venv.bak/
 
+# Pasta de cache do Python
 __pycache__/
 *.pyc
 
+# --- Artefatos de Modelo e Dados Gerados ---
+# Modelos, scalers e configurações gerados pelo script de treino.
+# São arquivos binários e não devem ser versionados com o código.
 backend/model_artifacts/
+
+# Arquivo de dados gerado pelo script de treino.
+# É um resultado, não um arquivo-fonte.
 frontend/jogadores_com_clusters.csv
 
+# --- Arquivos de Dados (Opcional, mas recomendado) ---
+# Se o seu CSV de dados brutos for muito grande, é uma boa prática não versioná-lo.
+# Se for pequeno (até alguns MB), você pode remover a linha abaixo.
 JogadoresV1.csv
 
+# Arquivos Excel que podem ser usados para teste de upload
 *.xlsx
 
+# --- Arquivos de Sistema Operacional e IDE ---
+# macOS
 .DS_Store
 
+# Visual Studio Code
 .vscode/
 
 # PyCharm
 .idea/
 
+# --- Arquivos de Log ---
 *.log
 logs/
