--- a/frontend/.streamlit/config.toml
+++ b/frontend/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#9B59B6"
-backgroundColor="#1C1E2D"
-secondaryBackgroundColor="#27293D"
+primaryColor="#00C49F"
+backgroundColor="#1A1A2E"
+secondaryBackgroundColor="#29384B"
 textColor="#FFFFFF"
 font="sans serif"
