--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3.8'
-
 services:
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
     container_name: backend_api
     environment:
       - API_KEY=${API_KEY}
@@ -17,26 +14,23 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: ./dashboard-react-frontend
       dockerfile: Dockerfile
-    container_name: frontend_dashboard
+    container_name: react-frontend
     environment:
-      - API_URL=http://backend:8000/predict
-      - API_KEY=${API_KEY}
+      # Dentro da rede do Docker, use o nome do serviço (backend), não localhost
+      - VITE_API_URL=http://backend:8000
+      - CHOKIDAR_USEPOLLING=true
     ports:
-      - "8501:8501"
+      - "5173:5173"        # Vite (não 8501)
     volumes:
-      - ./frontend:/app
+      - ./dashboard-react-frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
     networks:
       - app_network
-    command: >
-      sh -c "mkdir -p /app/.streamlit && 
-             echo 'API_KEY = \"'$$API_KEY'\"' > /app/.streamlit/secrets.toml && 
-             streamlit run /app/dashboard.py"
 
 networks:
   app_network:
     driver: bridge
-
