--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,24 @@
-FROM python:3.13-slim
+# backend/Dockerfile
+FROM python:3.9-slim
 
-RUN apt-get update && apt-get install -y libgomp1
+# Variável de ambiente para o Flask
+ENV FLASK_APP=main.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=8000
 
 WORKDIR /app
 
-# Copia primeiro o arquivo de dependências
-COPY requirements.txt .
+# Instala dependências do sistema
+RUN apt-get update && apt-get install -y --no-install-recommends libgomp1 && rm -rf /var/lib/apt/lists/*
 
-# Instala as dependências (esta camada será cacheada)
+# Copia e instala dependências do Python
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copia o resto do código da aplicação
+# Copia o código da aplicação
 COPY . .
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Comando para iniciar o servidor de produção (waitress)
+CMD ["waitress-serve", "--host=0.0.0.0", "--port=8000", "main:app"]
