--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-uvicorn
+flask
+flask-cors
 pandas
 numpy
-scikit-learn==1.6.1
-lightgbm
+scikit-learn
+xgboost
 joblib
-python-multipart
+waitress
