feat: atualizar dockers para vm

--- a/dashboard-react-frontend/Dockerfile
+++ b/dashboard-react-frontend/Dockerfile
@@ -1,13 +1,18 @@
-FROM node:20-alpine
-
+# dashboard-react-frontend/Dockerfile
+FROM node:20-alpine AS build
 WORKDIR /app
-
-# cache de dependências
-COPY package.json package-lock.json* pnpm-lock.yaml* yarn.lock* ./
-RUN npm ci || npm install
-
-# código
+COPY package*.json ./
+RUN npm ci
 COPY . .
 
-EXPOSE 5173
-CMD ["sh", "-c", "npm run dev"]
+ENV VITE_API_URL=/api
+
+# Se usar variáveis: VITE_API_BASE=/api (ou seu endpoint)
+# ENV VITE_API_BASE=/api
+RUN npm run build  # gera /dist
+
+FROM nginx:1.27-alpine
+COPY --from=build /app/dist /usr/share/nginx/html
+# Arquivo de config com SPA + proxy /api
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
