--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,26 @@
-FROM python:3.13-slim
+# backend/Dockerfile
+FROM python:3.12-slim
 
-# Instala as dependências do sistema, incluindo as ferramentas de compilação
-RUN apt-get update && apt-get install -y build-essential libgomp1 && rm -rf /var/lib/apt/lists/*
+# Evita .pyc e buffers no stdout/stderr
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1 \
+    MODEL_DIR=/app/artifacts
+
+# Dependências de runtime (OpenMP/Fortran usadas por numpy/scipy/sklearn)
+# build-essential só se faltar wheel — pode remover se tudo vier como wheel
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgomp1 libgfortran5 \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Copia primeiro o arquivo de dependências
+# Primeiro as deps (melhor cache)
 COPY requirements.txt .
+RUN python -m pip install -U pip setuptools wheel \
+ && pip install -r requirements.txt
 
-# Instala as dependências (esta camada será cacheada)
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copia o resto do código da aplicação
+# Código e artefatos
 COPY . .
 
 EXPOSE 8000
